Clean up .github & Fix gradient and alignment

--- a/src/style/App.module.css
+++ b/src/style/App.module.css
@@ -1,9 +1,3 @@
-body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
 ::selection {
     background-color: rgba(225, 225, 225, 0.25);
 }
